--- a/2025/justfile
+++ b/2025/justfile
@@ -1,3 +1,6 @@
 init day:
   mkdir day{{day}}
-  cd day{{day}} && dune init executable day{{day}}
+  dune init project day{{day}}
+
+run day:
+  cd day{{day}} && dune exec bin/main.exe
